...
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:inputType="textMultiLine"-->
            <!--android:ems="10"-->
            <!--android:id="@+id/editText"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_above="@+id/send"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_marginTop="50dp"-->
            <!--android:textSize="30dp"-->
            <!--android:background="@drawable/send_border" />-->

        <TextView
...
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_text"
            app:bootstrapSize="lg"
            app:bootstrapBrand="warning"
            android:layout_gravity="center_horizontal" />


        <com.beardedhen.androidbootstrap.BootstrapButton
...
