...
            app:bootstrapBrand="warning"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true"
            android:gravity="center_horizontal"
            android:id="@+id/parent"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:layout_width="wrap_content"
...
            app:bootstrapBrand="warning"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true"
            android:gravity="center_horizontal"
            android:id="@+id/manual"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/parent"
            android:layout_marginTop="5dp"
            android:layout_alignStart="@+id/parent"
            android:layout_gravity="center_horizontal" />

...
